<resources>
    <string name="app_name">Social Network</string>
    <string name="welcome">Welcome</string>
    <string name="description">Do a message. Stay focused. \nLive a healthy life.</string>
    <string name="login_with_email">Login With Email</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="description_signUp">Sign up now for free and startmessaging, and explore our app.</string>
    <string name="description_sigIn">Sign in now to access your messages and saved mode.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="forget_password">Forgot password</string>
    <string name="send">Send</string>
    <string name="description_forget">If you\'ve lost your password you should enter your email address here to get a password recovery</string>
    <string name="resgister">SIGN UP</string>
    <string name="logout">Logout</string>
    <string name="age">Age</string>
    <string name="sign_out">Sign out</string>
    <string name="please_verification_your_email_address">Please verification your email address</string>
    <string name="enter_the_message">Enter the message:</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>