<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@null"
        android:src="@drawable/snapchat" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/circular_medium"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/circular_book"
        android:text="@string/description_forget"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextRecovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email"
        android:drawablePadding="12dp"
        android:fontFamily="@font/circular_book"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="16dp" />


    <Button
        android:id="@+id/buttonSendRecovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bc_button"
        android:fontFamily="@font/circular_medium"
        android:padding="16dp"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="22sp" />

</LinearLayout>